			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

14-Jul-2003
~~~~~~~~~~~
Less frame-heavy look for info box (Thomas Leonard).
When mounting, force a refresh even if the mtime of the new disk is the same,
since some formats don't change it. Also, if mounting gives an error, check to
see if it worked anyway (Thomas Leonard).

13-Jul-2003
~~~~~~~~~~~
Added sort and selection buttons to the toolbar.  They start off disabled,
enable them from Options=>Tools if you want them.  (Stephen Watson)

Escape text/uri-list for drag and drop operations.  (Stephen Watson)

12-Jul-2003
~~~~~~~~~~~
Don't show hidden files on the SendTo menu (reported by Arnaud Calvo).

10-Jul-2003
~~~~~~~~~~~
Added CheckButtons to the info window to allow manipulation of permission 
bits (Stephen Watson).

09-Jul-2003
~~~~~~~~~~~
Added count of directory contents to info window (Stephen Watson).

04-Jul-2003
~~~~~~~~~~~
Updated italian translation in AppInfo.xml and src/po/it.po (Yuri Bongiorno)

30-Jun-2003
~~~~~~~~~~~
When renaming a non-UTF8 file, still assume the directory is valid UTF-8
(reported by Arnaud Calvo).

29-Jun-2003
~~~~~~~~~~~
Sort items on the SendTo menu (requested by John Pettigrew).

27-Jun-2003
~~~~~~~~~~~
Removed the menu-on-button-2 option. It was too inconsistant with everything
else, including panel applets and window managers, to be useful. Edit bind.c if
you really need it.

25-Jun-2003
~~~~~~~~~~~
Button-2 drags on panel applets always work now, even if the applet doesn't
forward them explicitly.

19-Jun-2003
~~~~~~~~~~~
Fix scrolling problem with GTK+-2.2.2 (reported by Alastair Porter, with
help from Götz Waschk).

16-Jun-2003
~~~~~~~~~~~
Bugfix: Resize on style change didn't do anything (Andy Hanton).
Bugfix: Dragging to panel and pinboard directories didn't offer the DnD
	menu (reported by BluPhoenyx).

11-Jun-2003
~~~~~~~~~~~
New SetBackdrop() SOAP method (Matthew Weier O'Phinney).

04-Jun-2003
~~~~~~~~~~~