@@ -992,7 +992,7 @@ static void refresh(gpointer data, guint action, GtkWidget *widget)
 {
 	g_return_if_fail(window_with_focus != NULL);
 
-	full_refresh();
+	filer_refresh(window_with_focus);
 }
 
 static void delete(FilerWindow *filer_window)
