@@ -305,7 +305,7 @@ static void toolbar_refresh_clicked(GtkWidget *widget,
 		filer_opendir(filer_window->sym_path, filer_window, NULL);
 	}
 	else
-		full_refresh();
+		filer_refresh(filer_window);
 }
 
 static void toolbar_home_clicked(GtkWidget *widget, FilerWindow *filer_window)
