@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+28-Jul-2003
+~~~~~~~~~~~
+Doing a Refresh in a directory under /uri/0install triggers a remote refresh.
+
 14-Jul-2003
 ~~~~~~~~~~~
 Less frame-heavy look for info box (Thomas Leonard).
